# slack-feed-enricher

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  config.yaml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ruff.yml  test.yml  ty.yml
src/slack_feed_enricher/: __main__.py  worker.py
src/slack_feed_enricher/claude/: __init__.py  exceptions.py  summarizer.py
src/slack_feed_enricher/config/: __init__.py  app.py  config.py  env.py
src/slack_feed_enricher/hatebu/: __init__.py  client.py  models.py
src/slack_feed_enricher/slack/: __init__.py  blocks.py  client.py  exceptions.py  markdown_converter.py  url_checker.py  url_extractor.py  url_resolver.py
tests/: test_main.py  test_url_checker.py  test_worker.py
tests/claude/: __init__.py  test_summarizer.py
tests/config/: test_app.py  test_config.py  test_env.py  test_init.py
tests/hatebu/: test_client.py  test_models.py
tests/slack/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_markdown_converter.py  test_url_extractor.py  test_url_resolver.py
